<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchConnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:checked="false"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewAutoconnect"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_read"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:onClick="onTapRead"
        android:text="@string/button_read"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewReadValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textViewReadValue" />

    <TextView
        android:id="@+id/textViewReadValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/button_read"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewReadHint" />

    <EditText
        android:id="@+id/editTextWriteValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/text_hint_write_value"
        android:importantForAutofill="no"
        android:inputType="text"
        android:text="@string/text_default_write_value"
        app:layout_constraintEnd_toStartOf="@+id/buttonWrite"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewWriteHint" />

    <Button
        android:id="@+id/buttonWrite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:onClick="onTapWrite"
        android:text="@string/button_write"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextWriteValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/editTextWriteValue" />

    <TextView
        android:id="@+id/textViewIndicateValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewIndicateHint" />

    <TextView
        android:id="@+id/textViewWriteHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/text_static_write_hint"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/editTextWriteValue"
        app:layout_constraintTop_toBottomOf="@+id/textViewReadValue" />

    <TextView
        android:id="@+id/textViewReadHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/text_static_read_hint"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/textViewReadValue"
        app:layout_constraintTop_toBottomOf="@+id/textViewLifecycleState" />

    <TextView
        android:id="@+id/textViewIndicateHint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/text_static_indicate_hint"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/textViewIndicateValue"
        app:layout_constraintTop_toBottomOf="@+id/editTextWriteValue" />

    <ScrollView
        android:id="@+id/scrollViewLog"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:background="@drawable/img_gray_border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewIndicateValue"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textViewLog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_default_logs_value" />

    </ScrollView>

    <TextView
        android:id="@+id/textViewAutoconnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/text_static_autoconnect"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonClearLog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:includeFontPadding="false"
        android:minWidth="48dip"
        android:minHeight="32dip"
        android:onClick="onTapClearLog"
        android:paddingLeft="8dp"
        android:paddingTop="4dp"
        android:paddingRight="8dp"
        android:paddingBottom="4dp"
        android:text="@string/button_clear_log"
        app:layout_constraintEnd_toEndOf="@+id/scrollViewLog"
        app:layout_constraintTop_toTopOf="@+id/scrollViewLog" />

    <TextView
        android:id="@+id/textViewLifecycleState"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/img_gray_border"
        android:text="@string/text_state_disconnected"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAutoconnect" />

    <TextView
        android:id="@+id/textViewSubscription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/text_not_subscribed"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewIndicateHint"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>